<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="softgroup.ch_sergij_home_task_01.MainActivity">


    <TextView
        android:text="@string/txtViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextName"
        android:layout_alignLeft="@+id/textViewName"
        android:layout_alignStart="@+id/textViewName"
        android:layout_marginTop="42dp"
        android:id="@+id/textViewPassword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/editTextName"
        android:layout_alignLeft="@+id/editTextName"
        android:layout_alignStart="@+id/editTextName"
        android:layout_marginTop="24dp"
        android:id="@+id/editTextPassword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextName"
        tools:inputType="text"
        android:clickable="false"
        android:layout_alignBaseline="@+id/textViewName"
        android:layout_alignBottom="@+id/textViewName"
        android:layout_toRightOf="@+id/textViewPassword"
        android:layout_toEndOf="@+id/textViewPassword"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp" />

    <Button
        android:text="@string/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:id="@+id/buttonLogin"
        android:onClick="onClick"
        android:layout_below="@+id/editTextPassword"
        android:layout_toRightOf="@+id/textViewName"
        android:layout_toEndOf="@+id/textViewName"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        style="@style/Widget.AppCompat.Button.Colored"/>

    <TextView
        android:text="@string/txtViewLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewLogin"
        android:textSize="36sp"
        android:textColorLink="@color/colorAccent"
        android:textAlignment="center"
        android:capitalize="words"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClick"
        android:clickable="false" />

    <TextView
        android:text="@string/txtViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="36dp"
        android:id="@+id/textViewName"
        android:layout_below="@+id/textViewLogin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/btnRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonRegistration"
        android:onClick="onClick"
        android:layout_alignBaseline="@+id/buttonLogin"
        android:layout_alignBottom="@+id/buttonLogin"
        android:layout_alignRight="@+id/editTextPassword"
        android:layout_alignEnd="@+id/editTextPassword"
        style="@style/Widget.AppCompat.Button.Colored"/>
</RelativeLayout>
